Added animations, nav, fixes.

--- a/index.html
+++ b/index.html
@@ -3,26 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <title>Kranti Nebhwani</title>
+
+    <!-- For responsive design using media -->
+    <meta name="viewport", content="width=device-width, initial-scale=1.0">
+
     <link href="splash-style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+    <script src="https://unpkg.com/ionicons@4.1.0/dist/ionicons.js"></script>
 </head>
 
 <body>
 
+  <!-- Main Splash Body -->
   <div id ="main-view">
 
     <div id="main-title">
       <h1>
         <span>Kranti Nebhwani</span>
       </h1>
-      <h2>Web Developer, Designer, Software Engineer</h2>
+      <h2>Web Developer, Designer, Software Engineer <ion-icon name="globe"></ion-icon></h2>
     </div>
+
+    <nav>
+      <span id="menu-btn"> <ion-icon name="list"></ion-icon>Menu</span>
+      <span id="nav" class="nav">
+        <a href="/html/">Resume</a> |
+        <a href="/css/">About</a> |
+        <a href="/js/">Projects</a> |
+        <a href="/jquery/">Contact</a>
+      </span>
+    </nav>
 
 
 
 
   </div>
+
+
 
   <script type="text/javascript" src="splash-script.js"></script>
 
