Updated nav functionality, animations. Made overlay for Contacts.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
   <!-- Main Splash Body -->
-  <div id ="main-view">
+  <div id="main-view">
 
     <div id="main-title">
       <h1>
@@ -28,18 +28,25 @@
     <nav>
       <span id="menu-btn"> <ion-icon name="list"></ion-icon>Menu</span>
       <span id="nav" class="nav">
-        <a href="/html/">Resume</a> |
-        <a href="/css/">About</a> |
-        <a href="/js/">Projects</a> |
-        <a href="/jquery/">Contact</a>
+        <a class="resume">Resume</a> |
+        <a class="about">About</a> |
+        <a class="projects">Projects</a> |
+        <a class="contact">Contact</a>
       </span>
     </nav>
 
-
-
-
   </div>
 
+  <div class="overlay">
+    <h2>Contact</h2>
+    <div class="content">
+      <div class="contact">
+        Email: darkphoton20@gmail.com<br>
+        Mobile: +886 925711860<br>
+        Office: (02) 2876-5716
+      </div>
+    </div>
+  </div>
 
 
   <script type="text/javascript" src="splash-script.js"></script>
