Updated nav functionality, contact page, dynamic close nav btn.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="main-title">
       <h1>
         <span>Kranti Nebhwani</span>
-      </h1>
+      </h1> 
       <h2>Web Developer, Designer, Software Engineer <ion-icon name="globe"></ion-icon></h2>
     </div>
 
@@ -32,21 +32,28 @@
         <a class="about">About</a> |
         <a class="projects">Projects</a> |
         <a class="contact">Contact</a>
+        <ion-icon class="nav-close" name="return-left"></ion-icon>
       </span>
     </nav>
 
   </div>
 
   <div class="overlay">
-    <h2>Contact</h2>
+    <ion-icon class="close-btn" name="close-circle"></ion-icon>
+    <!-- <div class="intro">You can reach me with these contacts between 9am - 9pm GMT. You can however email me anytime but the response may not be immediate but I will try!</div> -->
     <div class="content">
+
       <div class="contact">
-        Email: darkphoton20@gmail.com<br>
+        <h2>CONTACTS</h2><br>
         Mobile: +886 925711860<br>
-        Office: (02) 2876-5716
+        Office: (02) 2876-5716<br>
+        Email: darkphoton20@gmail.com
+
       </div>
     </div>
   </div>
+
+  
 
 
   <script type="text/javascript" src="splash-script.js"></script>
