Added ABOUT section, fixed title and nav menu with margin collapsing and positioning.

--- a/index.html
+++ b/index.html
@@ -29,14 +29,25 @@
       <span id="menu-btn"> <ion-icon name="list"></ion-icon>Menu</span>
       <span id="nav" class="nav">
         <a class="resume">Resume</a> |
-        <a class="about">About</a> |
+        <a class="about">About</a> | 
         <a class="projects">Projects</a> |
         <a class="contact">Contact</a>
         <ion-icon class="nav-close" name="return-left"></ion-icon>
       </span>
     </nav>
 
+    <div id="about">
+      <h2>ABOUT</h2><ion-icon class="close-about" name="close"></ion-icon>
+      <p>I'm a Software Engineering graduate who has earned a passion for coding and web design ever since a friend showed me
+        some code right as I started university. I changed my degree from Electrical Engineering into Software Engineering because
+        of this and managed to finish with a BEng degree with honors. I am hard working, dedicated and always looking to learn more
+        for coding and the current web technologies.</p>
+        <p>My best strengths in this field are using javascript and some frameworks to manipulate the DOM and design responsive
+          sites / web applications, using java and python, and also my knowledge in            security in the tech world which I took an advanced course for in my last year of studies and had good success in.</p>
+    </div>
   </div>
+
+
 
   <div class="overlay">
     <ion-icon class="close-btn" name="close-circle"></ion-icon>
@@ -44,7 +55,7 @@
     <div class="content">
 
       <div class="contact">
-        <h2>CONTACTS</h2><br>
+        <h2>CONTACT</h2><br>
         Mobile: +886 925711860<br>
         Office: (02) 2876-5716<br>
         Email: darkphoton20@gmail.com
