Updated theme and design, positioning and functionality of about / content page.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="viewport", content="width=device-width, initial-scale=1.0">
 
     <link href="splash-style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
     <script src="https://unpkg.com/ionicons@4.1.0/dist/ionicons.js"></script>
 </head>
@@ -37,7 +36,8 @@
     </nav>
 
     <div id="about">
-      <h2>ABOUT</h2><ion-icon class="close-about" name="close"></ion-icon>
+      <ion-icon class="close-about" name="close"></ion-icon>
+      <h2>ABOUT</h2>
       <p>I'm a Software Engineering graduate who has earned a passion for coding and web design ever since a friend showed me
         some code right as I started university. I changed my degree from Electrical Engineering into Software Engineering because
         of this and managed to finish with a BEng degree with honors. I am hard working, dedicated and always looking to learn more
@@ -50,20 +50,19 @@
 
 
   <div class="overlay">
-    <ion-icon class="close-btn" name="close-circle"></ion-icon>
-    <!-- <div class="intro">You can reach me with these contacts between 9am - 9pm GMT. You can however email me anytime but the response may not be immediate but I will try!</div> -->
-    <div class="content">
-
-      <div class="contact">
-        <h2>CONTACT</h2><br>
-        Mobile: +886 925711860<br>
-        Office: (02) 2876-5716<br>
-        Email: darkphoton20@gmail.com
-
-      </div>
-    </div>
   </div>
 
+  <!-- <div class="intro">You can reach me with these contacts between 9am - 9pm GMT. You can however email me anytime but the response may not be immediate but I will try!</div> -->
+  <div class="content">
+    <ion-icon class="close-btn" name="close-circle"></ion-icon>
+    <div class="contact">
+      <h2>CONTACT</h2><br>
+      Mobile: +886 925711860<br>
+      Office: (02) 2876-5716<br>
+      Email: darkphoton20@gmail.com
+
+    </div>
+  </div>
   
 
 
