Updated design and color scheme.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport", content="width=device-width, initial-scale=1.0">
 
     <link href="splash-style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans|Indie+Flower|Maven+Pro|Raleway|Shadows+Into+Light+Two|Titillium+Web|Neucha" rel="stylesheet">
     <script src="https://unpkg.com/ionicons@4.1.0/dist/ionicons.js"></script>
 </head>
 
@@ -30,7 +30,7 @@
       <span id="menu-btn"> <ion-icon name="list"></ion-icon>Menu</span>
       <span id="nav" class="nav">
         <a class="resume-nav">Resume</a> |
-        <a class="about-nav">About</a> | 
+        <a class="about-nav">About Me</a> | 
         <a class="projects-nav">Projects</a> |
         <a class="contact-nav">Contact</a>
         <ion-icon class="nav-close" name="return-left"></ion-icon>
@@ -40,13 +40,13 @@
     <!-- About Content -->
     <div id="about">
       <ion-icon class="close-about" name="close"></ion-icon>
-      <h2>ABOUT</h2>
-      <p>I'm a Software Engineering graduate who has earned a passion for coding and web design ever since a friend showed me
-        some code right as I started university. I changed my degree from Electrical Engineering into Software Engineering because
+      <h2>ABOUT ME</h2>
+      <p>I'm a Software Engineering graduate who earned a passion for coding and web development ever since I saw some code online
+        during the first year of university. I changed my degree from Electrical Engineering into Software Engineering because
         of this and managed to finish with a BEng degree with honors. I am hard working, dedicated and always looking to learn more
-        for coding and the current web technologies.</p>
-        <p>My best strengths in this field are using javascript and some frameworks to manipulate the DOM and design responsive
-          sites / web applications, using java and python, and also my knowledge in            security in the tech world which I took an advanced course for in my last year of studies and had good success in.</p>
+        in the area of programming and the current web technologies.</p><br>
+        <p>My best strengths in this field are using javascript and frameworks to manipulate the DOM and design responsive
+          sites / web applications; using java and python; and also knowledge in security for computers which I took an advanced course for in my final year of studies.</p>
     </div>
   </div>
 
