--- a/index.html
+++ b/index.html
@@ -38,16 +38,24 @@
     </nav>
 
     <!-- About Content -->
-    <div id="about">
+    <div id="about">  
       <ion-icon class="close-about" name="close"></ion-icon>
-      <h2>ABOUT ME</h2>
+      <div class="top-banner"><h2>ABOUT ME</h2></div>
       <p>I'm a Software Engineering graduate who earned a passion for coding and web development ever since I saw some code online
         during the first year of university. I changed my degree from Electrical Engineering into Software Engineering because
         of this and managed to finish with a BEng degree with honors. I am hard working, dedicated and always looking to learn more
-        in the area of programming and the current web technologies.</p><br>
-        <p>My best strengths in this field are using javascript and frameworks to manipulate the DOM and design responsive
+        in the area of programming and the current web technologies.<br><br>
+        My best strengths in this field are using javascript and frameworks to manipulate the DOM and design responsive
           sites / web applications; using java and python; and also knowledge in security for computers which I took an advanced course for in my final year of studies.</p>
     </div>
+
+    <!-- Projects Content -->
+    <div id="projects">
+      <ion-icon class="close-projects" name="close"></ion-icon>
+      <div class="top-banner"><h2>PROJECTS</h2></div>
+
+    </div>
+
   </div>
 
 
@@ -58,22 +66,24 @@
   <!-- Contact Content -->
   <!-- <div class="intro">You can reach me with these contacts between 9am - 9pm GMT. You can however email me anytime but the response may not be immediate but I will try!</div> -->
   <div class="content">
-    <ion-icon class="close-btn" name="close-circle"></ion-icon>
+    <ion-icon class="close-btn" name="close"></ion-icon>
     <div class="contact">
-      <h2>CONTACT</h2><br>
-      Mobile: +886 925711860<br>
-      Office: (02) 2876-5716<br>
-      Email: darkphoton20@gmail.com
-
+      <div class="top-banner"><h2>CONTACT</h2></div>
+      <br>
+      <ion-icon name="call"></ion-icon> Mobile: <span>+886 925711860</span><br><br>
+      <ion-icon name="business"></ion-icon> Office: <span>(02) 2876-5716</span><br><br>
+      <ion-icon name="mail"></ion-icon> Email: <span>darkphoton20@gmail.com</span>
+      
     </div>
+    
   </div>
   
   <!-- Resume Content -->
   <div class="resume">
-    <ion-icon class="close-btn" name="close-circle"></ion-icon>
+    <ion-icon class="close-btn" name="close"></ion-icon>
     <img class="cv-page1 flipped" src="images/cv1.jpg" width="700px" height="850px">
     <img class="cv-page2" src="images/cv2.jpg" width="700px" height="850px">
-    <button class="flip-cv">Flip!</button>
+    <button class="flip-cv">FLIP</button>
   </div>
 
 
