--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <!-- For responsive design using media -->
     <meta name="viewport", content="width=device-width, initial-scale=1.0">
-
+    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
     <link href="splash-style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans|Indie+Flower|Maven+Pro|Raleway|Shadows+Into+Light+Two|Titillium+Web|Neucha" rel="stylesheet">
     <script src="https://unpkg.com/ionicons@4.1.0/dist/ionicons.js"></script>
@@ -53,6 +53,11 @@
     <div id="projects">
       <ion-icon class="close-projects" name="close"></ion-icon>
       <div class="top-banner"><h2>PROJECTS</h2></div>
+
+      <div class="item"></div>
+      <div class="item"></div>
+      <div class="item"></div>
+      <div class="item"></div>
 
     </div>
 
