Added weather api to show weather in main portal, adjusted design.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- For responsive design using media -->
     <meta name="viewport", content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+    <link rel="icon" type="image/x-icon" href="/images/favicon/favicon.ico">
     <link href="splash-style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans|Indie+Flower|Maven+Pro|Raleway|Shadows+Into+Light+Two|Titillium+Web|Neucha" rel="stylesheet">
     <script src="https://unpkg.com/ionicons@4.1.0/dist/ionicons.js"></script>
@@ -30,7 +31,7 @@
       <span id="menu-btn"> <ion-icon name="list"></ion-icon>Menu</span>
       <span id="nav" class="nav">
         <a class="resume-nav">Resume</a> |
-        <a class="about-nav">About Me</a> | 
+        <a class="about-nav">About Me</a> |
         <a class="site-nav">The Site</a> |
         <a class="projects-nav">Projects</a> |
         <a class="contact-nav">Contact</a>
@@ -78,7 +79,6 @@
     <div class="item"></div>
     <div class="item"></div>
     <div class="item"></div>
-
   </div>
 
   <!-- Contact Content -->
@@ -104,6 +104,8 @@
     <button class="flip-cv">FLIP</button>
   </div>
 
+  <!-- Weather Display -->
+  <div class="weather-display"></div>
   <!-- Test -->
 
   <script type="text/javascript" src="splash-script.js"></script>
