Finished initial functionality and presentation of project section.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>
         <span>Kranti Nebhwani</span>
       </h1> 
-      <h2>Web Developer, Designer, Software Engineer <ion-icon name="globe"></ion-icon></h2>
+      <h2>Web Developer, Designer, Software Engineer<ion-icon name="globe"></ion-icon></h2>
     </div>
 
     <!-- Nav Menu -->
@@ -75,10 +75,10 @@
     <ion-icon class="close-btn" name="close"></ion-icon>
     <div class="top-banner"><h2>PROJECTS</h2></div>
     <div class="grid-sizer"></div>
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
+    <a class="item" href="https://github.com/darkphotonKN/TaipeiWeatherApp"></a>
+    <a class="item" href="http://www.krantinebhwani.com"></a>
+    <a class="item" href="https://darkphotonkn.github.io/Bookmarks-Web-App"></a>
+    <a class="item" href="https://github.com/darkphotonKN/Mohan-Company-Site"></a>
   </div>
 
   <!-- Contact Content -->
@@ -88,6 +88,8 @@
     <div class="contact">
       <div class="top-banner"><h2>CONTACT</h2></div>
       <br>
+      <p>For job opportunities, to work together, or for other inquiries you can reach me 
+      at:</p><br>
       <ion-icon name="call"></ion-icon> Mobile: <span>+886 925711860</span><br><br>
       <ion-icon name="business"></ion-icon> Office: <span>(02) 2876-5716</span><br><br>
       <ion-icon name="mail"></ion-icon> Email: <span>darkphoton@krantinebhwani.com</span>
